--- a/index.html
+++ b/index.html
@@ -71,21 +71,24 @@
       <div class="row">
         <div class="col-lg-4  col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <img src="/img/calendar.svg" width="100px" alt="">
+            <hr>
             <h3 class="h4 mb-2"><font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO</h3>
             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+            <img src="/img/latin_america.svg" width="100px" alt="">
+            <hr>
             <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3>
             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+            <img src="/img/mundi.svg" alt="" width="100px">
+            <hr>
             <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3>
             <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
           </div>
