--- a/index.html
+++ b/index.html
@@ -72,25 +72,29 @@
         <div class="col-lg-4  col-md-6 text-center">
           <div class="mt-5">
             <img src="/img/calendar.svg" width="100px" alt="">
-            <hr>
+            <br>
+            <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <br>
+            <p class="mb-0">Our themes are updated regularly to keep them bug free!</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <img src="/img/latin_america.svg" width="100px" alt="">
-            <hr>
-            <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <br>
+            <br>
+            <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3><br>
+            <p class="mb-0">All dependencies are kept current to keep things fresh.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <img src="/img/mundi.svg" alt="" width="100px">
-            <hr>
-            <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <br>
+            <br>
+            <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3><br>
+            <p class="mb-0">You can use this design as is, or you can make changes!</p>
           </div>
         </div>
       </div>
@@ -213,7 +217,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
         </div>
       </div>
       <div class="row">
