--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-lg-4  col-md-6 text-center">
           <div class="mt-5">
-            <img src="/img/calendar.svg" width="100px" alt="">
+            <img src="img/calendar.svg" width="100px" alt="">
             <br>
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO</h3>
@@ -81,7 +81,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
-            <img src="/img/latin_america.svg" width="100px" alt="">
+            <img src="img/latin_america.svg" width="100px" alt="">
             <br>
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3><br>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
-            <img src="/img/mundi.svg" alt="" width="100px">
+            <img src="img/mundi.svg" alt="" width="100px">
             <br>
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3><br>
