--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO</h3>
             <br>
-            <p class="mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -85,7 +85,7 @@
             <br>
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3><br>
-            <p class="mb-0">All dependencies are kept current to keep things fresh.</p>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -94,7 +94,7 @@
             <br>
             <br>
             <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3><br>
-            <p class="mb-0">You can use this design as is, or you can make changes!</p>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
       </div>
