Add Files and customizing template

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+    rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -34,14 +35,16 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <img class="navbar-brand js-scroll-trigger" src="img/logo_fire_universitario.svg" width="20%">
-      
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="menu-link" href="#about">NOSSA HISTÓRIA</a>
+            <a class="nav-link js-scroll-trigger" id="menu-link" href="#nossahistoria">NOSSA HISTÓRIA</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" id="menu-link" href="#services">O QUE FAZEMOS</a>
@@ -60,7 +63,7 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="container h-100">
-      
+
     </div>
   </header>
 
@@ -74,9 +77,13 @@
             <img src="img/calendar.svg" width="100px" alt="">
             <br>
             <br>
-            <h3 class="h4 mb-2"><font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO</h3>
+            <h3 class="h4 mb-2">
+              <font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO
+            </h3>
             <br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
+              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
+              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -84,8 +91,12 @@
             <img src="img/latin_america.svg" width="100px" alt="">
             <br>
             <br>
-            <h3 class="h4 mb-2"><font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA</h3><br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
+            <h3 class="h4 mb-2">
+              <font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA
+            </h3><br>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
+              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
+              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -93,8 +104,12 @@
             <img src="img/mundi.svg" alt="" width="100px">
             <br>
             <br>
-            <h3 class="h4 mb-2"><font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS</h3><br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore voluptate voluptate deserunt magna reprehenderit consectetur.</p>
+            <h3 class="h4 mb-2">
+              <font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS
+            </h3><br>
+            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
+              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
+              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
       </div>
@@ -102,110 +117,26 @@
   </section>
 
   <!-- About Section -->
-  <section class="page-section" id="nossahistoria">
-      <div class="" id="img-nossahistoria"><img src="/img/nossahistoria.png" alt="" srcset=""></div>
-      <div class="row justify-content-end">
-        <div class="col-lg-6 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
-          <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+  <section class="page-section" id="nossahistoria" style="padding: 0px; vertical-align: middle">
+    <div class="row">
+      <div class="col-md-6">
+        <video autoplay muted loop class="bg_video" height="100%">
+          <source src="video/fire.mp4">
+        </video>
+      </div>
+      <div class="col-md-6">
+          <h1 class="mb-4" style="color: #fff; padding-top: 4.5em; font-family:'bebas-neue', sans-serif;"><i class="fas fa-caret-right" style="color:#fff; padding-top: 3px; font-size: 34px"></i>
+            NOSSA HISTÓRIA</h1>
+            <p class="text-white" style="font-family:'bebas-neue', sans-serif; font-size: 34px; align: left !important;">Cupidatat do qui cupidatat in velit irure esse cupidatat id culpa anim. Laboris consequat ipsum ex voluptate minim. Veniam reprehenderit enim Lorem adipisicing.<br> Minim adipisicing reprehenderit sint adipisicing amet elit incididunt pariatur consequat nulla amet aute. <br>Eiusmod qui laboris excepteur minim. Nulla velit id sunt magna anim est.</p>
         </div>
       </div>
   </section>
 
-  
-
-  <!-- Portfolio Section -->
-  <!-- <section id="portfolio">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
+  <section class="page-section bg-dark text-white" id="oquefazemos">
     <div class="container text-center">
-      <h2 class="mb-4" style="color: #f04732"><i class="fas fa-caret-right" style="color:#ffd635; font-size: 54px"></i> O QUE FAZEMOS!</h2>
+      <h2 class="mb-4" style="color: #f04732"><i class="fas fa-caret-right" style="color:#ffd635; font-size: 54px"></i>
+        O QUE FAZEMOS!</h2>
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
   </section>
@@ -217,7 +148,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get
+            back to you as soon as possible!</p>
         </div>
       </div>
       <div class="row">
@@ -251,6 +183,23 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
+
+  <script>
+    function deferVideo() {
+
+      //defer html5 video loading
+      $("video source").each(function () {
+        var sourceFile = $(this).attr("data-src");
+        $(this).attr("src", sourceFile);
+        var video = this.parentElement;
+        video.load();
+        // uncomment if video is not autoplay
+        //video.play();
+      });
+
+    }
+    window.onload = deferVideo;
+  </script>
 
 </body>
 
