--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section class="page-section" id="services">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4  col-md-6 text-center">
+        <div class="col-md-4  col-sm-12 text-center">
           <div class="mt-5">
             <img src="img/calendar.svg" width="100px" alt="">
             <br>
@@ -86,7 +86,7 @@
               voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-md-4 col-sm-12 text-center">
           <div class="mt-5">
             <img src="img/latin_america.svg" width="100px" alt="">
             <br>
@@ -99,7 +99,7 @@
               voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 text-center">
+        <div class="col-md-4 col-sm-12 text-center">
           <div class="mt-5">
             <img src="img/mundi.svg" alt="" width="100px">
             <br>
@@ -119,12 +119,12 @@
   <!-- About Section -->
   <section class="page-section" id="nossahistoria" style="padding: 0px; vertical-align: middle">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6">
         <video autoplay muted loop class="bg_video" height="100%">
           <source src="video/fire.mp4">
         </video>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6">
           <h1 class="mb-4" style="color: #fff; padding-top: 4.5em; font-family:'bebas-neue', sans-serif;"><i class="fas fa-caret-right" style="color:#fff; padding-top: 3px; font-size: 34px"></i>
             NOSSA HISTÓRIA</h1>
             <p class="text-white" style="font-family:'bebas-neue', sans-serif; font-size: 34px; align: left !important;">Cupidatat do qui cupidatat in velit irure esse cupidatat id culpa anim. Laboris consequat ipsum ex voluptate minim. Veniam reprehenderit enim Lorem adipisicing.<br> Minim adipisicing reprehenderit sint adipisicing amet elit incididunt pariatur consequat nulla amet aute. <br>Eiusmod qui laboris excepteur minim. Nulla velit id sunt magna anim est.</p>
@@ -132,20 +132,21 @@
       </div>
   </section>
 
-  <!-- Call to Action Section -->
+  <!-- Call to Action Section
   <section class="page-section bg-dark text-white" id="oquefazemos">
     <div class="container text-center">
       <h2 class="mb-4" style="color: #f04732"><i class="fas fa-caret-right" style="color:#ffd635; font-size: 54px"></i>
         O QUE FAZEMOS!</h2>
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
+          <img src="img/" alt="">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
           <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get
