--- a/index.html
+++ b/index.html
@@ -119,16 +119,15 @@
   <!-- About Section -->
   <section class="page-section" id="nossahistoria" style="padding: 0px; vertical-align: middle">
     <div class="row">
-      <div class="col-md-6 col-sm-6">
-        <video autoplay muted loop class="bg_video" height="100%">
-          <source src="video/fire.mp4">
-        </video>
+        <iframe class="col-md-6 col-sm-12" height="720" src="https://www.youtube.com/embed/YOkUYs9cHj4" muted frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="col-md-6 col-sm-12 text-center">
+            <h2 class="mt-0">Let's Get In Touch!</h2>
+            <hr class="divider my-4">
+            <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get
+              back to you as soon as possible!</p>
+          </div>
       </div>
-      <div class="col-md-6 col-sm-6">
-          <h1 class="mb-4" style="color: #fff; padding-top: 4.5em; font-family:'bebas-neue', sans-serif;"><i class="fas fa-caret-right" style="color:#fff; padding-top: 3px; font-size: 34px"></i>
-            NOSSA HISTÓRIA</h1>
-            <p class="text-white" style="font-family:'bebas-neue', sans-serif; font-size: 34px; align: left !important;">Cupidatat do qui cupidatat in velit irure esse cupidatat id culpa anim. Laboris consequat ipsum ex voluptate minim. Veniam reprehenderit enim Lorem adipisicing.<br> Minim adipisicing reprehenderit sint adipisicing amet elit incididunt pariatur consequat nulla amet aute. <br>Eiusmod qui laboris excepteur minim. Nulla velit id sunt magna anim est.</p>
-        </div>
+      
       </div>
   </section>
 
