--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
               <font style="color:#FFD635">10 ANOS</font> DE FIRE UNIVERSITÁRIO
             </h3>
             <br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
-              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
-              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-12 text-center">
@@ -94,9 +91,6 @@
             <h3 class="h4 mb-2">
               <font style="color:#FFD635">+ DE 350 NÚCLEOS</font> PELA AMÉRICA LATINA
             </h3><br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
-              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
-              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-12 text-center">
@@ -107,9 +101,6 @@
             <h3 class="h4 mb-2">
               <font style="color:#FFD635">80 MIL</font> UNIVERSITÁRIOS ALCANÇADOS
             </h3><br>
-            <p class="mb-0" align="justify">Id et laboris excepteur fugiat fugiat sit. Veniam ullamco in id esse ex
-              tempor est nulla dolor nisi sunt aliquip duis. Fugiat qui ea ex mollit eiusmod sunt veniam labore
-              voluptate voluptate deserunt magna reprehenderit consectetur.</p>
           </div>
         </div>
       </div>
@@ -119,28 +110,23 @@
   <!-- About Section -->
   <section class="page-section" id="nossahistoria" style="padding: 0px; vertical-align: middle">
     <div class="row">
-        <iframe class="col-md-6 col-sm-12" height="720" src="https://www.youtube.com/embed/YOkUYs9cHj4" muted frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div class="col-md-6 col-sm-12 text-center">
-            <h2 class="mt-0">Let's Get In Touch!</h2>
-            <hr class="divider my-4">
-            <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get
-              back to you as soon as possible!</p>
-          </div>
+        <iframe class="col-md-12 col-sm-12" height="720" src="https://www.youtube.com/embed/YOkUYs9cHj4" muted frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       
       </div>
   </section>
 
-  <!-- Call to Action Section
+  <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white" id="oquefazemos">
     <div class="container text-center">
-      <h2 class="mb-4" style="color: #f04732"><i class="fas fa-caret-right" style="color:#ffd635; font-size: 54px"></i>
+      <h2 class="mb-4"><i class="fas fa-caret-right" style="color:#640000; font-size: 54px"></i>
         O QUE FAZEMOS!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
-    </div>
+        <p>Somos um movimento universitário cristocêntrico.<br>Nos movemos profeticamente dentro das Universidades e nas mais diversas áreas da sociedade,  fundamentados sobre a palavra de I Coríntios 2:4-5: "A minha linguagem e a minha pregação não consistiram em palavras persuasivas de sabedoria humana, mas em demonstração do Espírito de poder; para que a vossa fé não se apoiasse na sabedoria dos homens, mas no poder de Deus".<br>
+          Acreditamos que a sabedoria de Deus foi revelada em Cristo Jesus e, através dos princípios de seu reino inabalável, sistemas são reeditados e provocam uma revolução cultural. Buscamos revelar a verdade do céu ao homem contemporâneo através de Cultura, Criatividade, Ciência e Sabedoria!</p>
+       </div>
   </section> -->
 
-  <!-- Contact Section -->
+  <!-- Contact Section 
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
@@ -159,19 +145,19 @@
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
+          <!-- Make sure to change the email address in anchor text AND the link below! 
           <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <!-- Footer -->
+  <!-- Footer 
   <footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
     </div>
-  </footer>
+  </footer>-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
