--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container text-center">
       <h2 class="mb-4"><i class="fas fa-caret-right" style="color:#640000; font-size: 54px"></i>
         O QUE FAZEMOS!</h2>
-        <p>Somos um movimento universitário cristocêntrico.<br>Nos movemos profeticamente dentro das Universidades e nas mais diversas áreas da sociedade,  fundamentados sobre a palavra de I Coríntios 2:4-5: "A minha linguagem e a minha pregação não consistiram em palavras persuasivas de sabedoria humana, mas em demonstração do Espírito de poder; para que a vossa fé não se apoiasse na sabedoria dos homens, mas no poder de Deus".<br>
+        <p id="oquefazemos-texto">Somos um movimento universitário cristocêntrico.<br>Nos movemos profeticamente dentro das Universidades e nas mais diversas áreas da sociedade,  fundamentados sobre a palavra de I Coríntios 2:4-5: "A minha linguagem e a minha pregação não consistiram em palavras persuasivas de sabedoria humana, mas em demonstração do Espírito de poder; para que a vossa fé não se apoiasse na sabedoria dos homens, mas no poder de Deus".<br>
           Acreditamos que a sabedoria de Deus foi revelada em Cristo Jesus e, através dos princípios de seu reino inabalável, sistemas são reeditados e provocam uma revolução cultural. Buscamos revelar a verdade do céu ao homem contemporâneo através de Cultura, Criatividade, Ciência e Sabedoria!</p>
        </div>
   </section> -->
