--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fas fa-ellipsis-h" style="color: white;"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
@@ -62,14 +62,18 @@
 
   <!-- Masthead -->
   <header class="masthead">
-    <div class="container h-100">
-
+    <div class="container h-100 text-center d-flex align-content-end flex-wrapr">
+      <div class="container">
+        <img src="img/insta.svg"  width="50x50">
+        <img src="img/face.svg" width="50x50">
+        <img src="img/youtube.svg" width="50x50">
+      </div>
     </div>
   </header>
 
 
   <!-- Services Section -->
-  <section class="page-section" id="services">
+  <section class="page-section services" id="services">
     <div class="container">
       <div class="row">
         <div class="col-md-4  col-sm-12 text-center">
@@ -93,7 +97,7 @@
             </h3><br>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 text-center">
+        <div class="col-sm-12 col-md-4  text-center">
           <div class="mt-5">
             <img src="img/mundi.svg" alt="" width="100px">
             <br>
@@ -117,14 +121,14 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white" id="oquefazemos">
+  <section class="page-section" id="oquefazemos">
     <div class="container text-center">
       <h2 class="mb-4"><i class="fas fa-caret-right" style="color:#640000; font-size: 54px"></i>
         O QUE FAZEMOS!</h2>
         <p id="oquefazemos-texto">Somos um movimento universitário cristocêntrico.<br>Nos movemos profeticamente dentro das Universidades e nas mais diversas áreas da sociedade,  fundamentados sobre a palavra de I Coríntios 2:4-5: "A minha linguagem e a minha pregação não consistiram em palavras persuasivas de sabedoria humana, mas em demonstração do Espírito de poder; para que a vossa fé não se apoiasse na sabedoria dos homens, mas no poder de Deus".<br>
           Acreditamos que a sabedoria de Deus foi revelada em Cristo Jesus e, através dos princípios de seu reino inabalável, sistemas são reeditados e provocam uma revolução cultural. Buscamos revelar a verdade do céu ao homem contemporâneo através de Cultura, Criatividade, Ciência e Sabedoria!</p>
        </div>
-  </section> -->
+  </section>
 
   <!-- Contact Section 
   <section class="page-section" id="contact">
@@ -152,12 +156,25 @@
     </div>
   </section> -->
 
-  <!-- Footer 
-  <footer class="bg-light py-5">
+  <!-- Footer -->
+  <footer class="bg-wine py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="text-center">
+        <div>
+            <i id="email-arrow" class="fas fa-caret-right"></i>
+        </div>
+        <h1 style="font-weight: 600">CONTATO</h1>
+        <br>
+        <img src="img/e-mail.svg" width="100x100" alt="">
+        <h3 id="email-text">AGENDA@FIREUNIVERSITARIO.COM.BR</h3>
+      </div>
+      <div class="container text-center py-3">
+        <img src="img/insta.svg"  width="50x50">
+        <img src="img/face.svg" width="50x50">
+        <img src="img/youtube.svg" width="50x50">
+      </div>
     </div>
-  </footer>-->
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
