Correct Buttons and Colors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <img class="navbar-brand js-scroll-trigger" src="img/logo_fire_universitario.svg" width="20%">
+  <a href="#"><img class="navbar-brand js-scroll-trigger" src="img/logo_fire_universitario.svg"  width="80%"></a>
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -47,10 +47,10 @@
             <a class="nav-link js-scroll-trigger" id="menu-link" href="#nossahistoria">NOSSA HISTÓRIA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="menu-link" href="#services">O QUE FAZEMOS</a>
+            <a class="nav-link js-scroll-trigger" id="menu-link" href="#oquefazemos">O QUE FAZEMOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="menu-link" href="#portfolio">CONTATO</a>
+            <a class="nav-link js-scroll-trigger" id="menu-link" href="#contact">CONTATO</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -63,11 +63,11 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="container h-100 text-center d-flex align-content-end flex-wrapr">
-      <div class="container">
-        <img src="img/insta.svg"  width="50x50">
-        <img src="img/face.svg" width="50x50">
-        <img src="img/youtube.svg" width="50x50">
-      </div>
+    </div>
+    <div class="container text-center" style="margin-top: -70px">
+      <a href="https://www.instagram.com/fireuniversitario" target="_blank"><img src="img/insta.svg"  width="50x50"></a>
+      <a href="https://www.facebook.com/FireUniversitario" target="_blank"><img src="img/face.svg" width="50x50"></a>
+      <a href="https://www.youtube.com/channel/UCk-HbxjcYjuqrlXEMg1uQ_g" target="_blank"><img src="img/youtube.svg" width="50x50"></a>
     </div>
   </header>
 
@@ -157,7 +157,7 @@
   </section> -->
 
   <!-- Footer -->
-  <footer class="bg-wine py-5">
+  <footer class="bg-wine py-5" id="contact">
     <div class="container">
       <div class="text-center">
         <div>
